# gruber

./: .gitignore  .prettierrc.json  .slumber.yml  Cargo.toml  README.md  build.sh  gruber.service  index.html  package-lock.json  package.json  rust-toolchain.toml
src/: Main.elm  app.html  config.rs  main.rs  services.rs  view.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  util.rs  weather.rs
src/routes/: +layout.svelte
src/routes/transit/: +page.svelte
src/routes/weather/: +page.svelte
src/services/: transit.rs  weather.rs
static/: shared.css
