[package]
name = "gruber"
description = "Raspberry Pi touchscreen GUI"
version = "0.1.0"
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
keywords = []
repository = "https://github.com/LucasPickering/gruber"
homepage = "https://github.com/LucasPickering/gruber"
edition = "2024"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.86.0"

[dependencies]

[workspace.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [] - " },
]
