[package]
name = "gruber"
description = "Raspberry Pi touchscreen GUI"
version = "0.1.0"
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
keywords = []
repository = "https://github.com/LucasPickering/gruber"
homepage = "https://github.com/LucasPickering/gruber"
edition = "2024"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.86.0"

[dependencies]
anyhow = "1.0.98"
chrono = {version = "0.4.41", default-features = false, features = [
    "clock",
    "serde",
]}
iced = {version = "0.13.1", default-features = true, features = ["tokio"]}
iced_aw = {version = "0.12.2", default-features = false, features = ["tab_bar"]}
indexmap = "2.9.0"
itertools = "0.14.0"
log = "0.4.27"
reqwest = {version = "0.12.19", default-features = false, features = [
    "rustls-tls",
    "json",
]}
serde = {version = "1.0.219", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.140"}
ureq = {version = "2.9.6", features = ["json"]}

[workspace.lints.rust]
async_fn_in_trait = "allow"
unsafe_code = "forbid"


[workspace.lints.clippy]
all = {level = "deny", priority = -1}
pedantic = {level = "warn", priority = -1}

allow_attributes = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
default_trait_access = "allow"
doc_markdown = "allow"
explicit_deref_methods = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
