[package]
name = "gruber"
description = "Raspberry Pi touchscreen GUI"
version = "0.1.0"
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
keywords = []
repository = "https://github.com/LucasPickering/gruber"
homepage = "https://github.com/LucasPickering/gruber"
edition = "2024"
license = "MIT"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.86.0"

[profile.dev]
debug = false

[build-dependencies]
tauri-build = {version = "2.2.0", features = []}

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
log = "0.4"
tauri = {version = "2.5.0", features = []}
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-window-state = {git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2"}

[workspace.lints.rust]
async_fn_in_trait = "allow"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = {level = "deny", priority = -1}
pedantic = {level = "warn", priority = -1}

allow_attributes = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
default_trait_access = "allow"
doc_markdown = "allow"
explicit_deref_methods = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
